--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <spring.version>5.2.22.RELEASE</spring.version>
     <aspectj.version>1.9.9.1</aspectj.version>
     <log4j.version>1.2.17</log4j.version>
+    <hikaricp.version>5.0.1</hikaricp.version>
   </properties>
   <name>RestaurantOrdering Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -114,6 +115,12 @@
       <artifactId>aspectjweaver</artifactId>
       <version>${aspectj.version}</version>
 
+    </dependency>
+
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>${hikaricp.version}</version>
     </dependency>
 
 
