--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <aspectj.version>1.9.9.1</aspectj.version>
     <log4j.version>1.2.17</log4j.version>
     <hikaricp.version>5.0.1</hikaricp.version>
+    <jackson.version>2.13.4</jackson.version>
   </properties>
   <name>RestaurantOrdering Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -121,6 +122,18 @@
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>${hikaricp.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
 
 
